Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,10 @@
 trigger:
 - development
 
-pool:
-  vmImage: 'windows-latest'
+#pool:
+#  vmImage: 'windows-latest'
+
+pool: MyPool
 
 variables:
   solution: '**/*.sln'
