--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build \src\DeepCloning\ShereSoft.DeepCloning\ShereSoft.DeepCloning.csproj --no-restore
+ #   - name: Test
+ #     run: dotnet test --no-build --verbosity normal
