--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore \src\DeepCloning\ShereSoft.DeepCloning\ShereSoft.DeepCloning.csproj
+      run: dotnet restore /src/DeepCloning/ShereSoft.DeepCloning/ShereSoft.DeepCloning.csproj
     - name: Build
-      run: dotnet build \src\DeepCloning\ShereSoft.DeepCloning\ShereSoft.DeepCloning.csproj --no-restore
+      run: dotnet build /src/DeepCloning/ShereSoft.DeepCloning/ShereSoft.DeepCloning.csproj --no-restore
  #   - name: Test
  #     run: dotnet test --no-build --verbosity normal
